# Open-Source-Temperature-Sensor-ESP32-C6

Case Design/: Case_Pictures_from CAD.pdn  ESP32-C6_Temp_Sensor_CaseV1.20240501-194529.FCBak  ESP32-C6_Temp_Sensor_CaseV1.FCStd  ESP32-C6_Temp_Sensor_CaseV2.20240501-214231.FCBak  ESP32-C6_Temp_Sensor_CaseV2.FCStd  ESP32-C6_Temp_Sensor_CaseV3.20240507-151616.FCBak  ESP32-C6_Temp_Sensor_CaseV3.FCStd  ESP32-C6_Temp_Sensor_CaseV3.step  ESP32-C6_Temp_Sensor_CaseV4.20240509-000937.FCBak  ESP32-C6_Temp_Sensor_CaseV4.FCStd  ESP32-C6_Temp_Sensor_CaseV4.step
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  template.c  template.h
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/includes/: main.h
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/includes/io/: gpio_init.h  i2c_init.h  pin_definitions.h
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/includes/mqtt/: mqtt.h  wifi.h
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/includes/sht/: measure_sensor.h
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/main/: CMakeLists.txt  app_main.c
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/main/io/: gpio_init.c  i2c_init.c
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/main/mqtt/: mqtt.c  wifi.c
Code/ESP32-C6_Temp_Sensor_Mqtt5_V4/main/sht/: measure_sensor.c
ESP32-C6_Temp_Sensor/BA-Downloads/LIB_ESP32-C6-MINI-1-H4/ESP32-C6-MINI-1-H4.pretty/: ESP32C6MINI1H4_Module.kicad_mod
Node-RED/: PrototypeV1_flow.json
PCB Design/ESP32-C6_Temp_Sensor/: ESP32-C6_Temp_Sensor.kicad_pcb  ESP32-C6_Temp_Sensor.kicad_prl  ESP32-C6_Temp_Sensor.kicad_pro  ESP32-C6_Temp_Sensor.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
(+49 files in other folders)
